--- a/index.html
+++ b/index.html
@@ -72,8 +72,32 @@
 </section>
 <section class="dv">
 <div class="first">
-    <strong class="he">MY next Target</strong>
+    <strong class="he">MY Carrent Target</strong>
     <p class="pta">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, quae qui consectetur cupiditate repudiandae minima adipisci. Hic nam totam vitae!</p>
+</div>
+</section>
+
+<section>
+<div class="iconmain width">
+    <div class="subicon">
+        <img class="html" src="./assets/html.png" alt="">
+<strong>  HTML</strong>
+
+<p class="ptag">  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam, distinctio.</p>
+<button class="buto">learn more</button>
+    </div>
+    <div class="subicon">
+        <img class="html" src="./assets/css.png" alt="">
+        <strong>CSS</strong>
+        <p class="ptag">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, voluptatem?</p>
+        <button class="buto">Learn More</button>
+    </div>
+    <div class="subicon">
+        <img class="js" src="./assets/js.png" alt="">
+        <strong>Javascreipt</strong>
+        <p class="ptag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, quia?</p>
+        <button class="buto">Learn More</button>
+    </div>
 </div>
 </section>
 <footer>
